# nasiya365-frappe

./: .env.example  .env.prod.example  .gitignore  CONTRACT_IMPORT_FIX.md  DATA_IMPORT_CSV_REPORT.md  DEPLOYMENT.md  Dockerfile  IMPORT_RELATIONSHIPS_FIX.md  INSTALL_REQUIREMENTS.md  LOCAL_DEBUG.md  MANIFEST.in  README.md  README.root.md  WORKSPACE_ACCESS.md  assets.json  assets_old.json  cleanup_import.py  copy-assets.sh  current_nginx.conf  docker-compose.prod.yml  docker-compose.yml  easypanel-template.json  easypanel.yml  init-site.sh  license.txt  modules.txt  nginx_config.txt  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  setup.sh  setup_workspace.py
nasiya365/: __init__.py  cleanup_import.py  data_import.py  fix_ws.py  hooks.py  install.py  modules.txt  requirements.txt  run_import_test.py  stock_entry.csv
nasiya365/config/: __init__.py  desktop.py
nasiya365/doctype/branch/: branch.json
nasiya365/doctype/branch_user/: branch_user.json  branch_user.py
nasiya365/doctype/cashbox_transaction/: cashbox_transaction.json
nasiya365/doctype/contract/: contract.json
nasiya365/doctype/customer_phone_number/: customer_phone_number.json
nasiya365/doctype/payment_transaction/: test_payment_transaction.py
nasiya365/doctype/product/: product.json  product.py
nasiya365/doctype/sales_order_item/: sales_order_item.json
nasiya365/doctype/stock_ledger/: stock_ledger.json
nasiya365/nasiya365/: __init__.py  data_import.py  hooks.py
nasiya365/nasiya365/api/: __init__.py
nasiya365/nasiya365/config/: desktop.py
nasiya365/nasiya365/nasiya365/: __init__.py
nasiya365/nasiya365/tasks/: hourly.py  notifications.py
nasiya365/tasks/: __init__.py  daily.py  weekly.py
nasiya365/utils/: jinja_filters.py
templates/: index.ts  meta.yaml
(+82 files in other folders)
