[project]
name = "nasiya365"
authors = [
    { name = "Nasiya365 Team", email = "info@nasiya365.uz"}
]
description = "BNPL SaaS Platform - Buy Now Pay Later with Inventory & Sales Management"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench]
is-frappe-app = true
apps = ["nasiya365"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
