[project]
name = "nasiya365"
authors = [
    { name = "Nasiya365 Team", email = "info@nasiya365.uz"}
]
description = "BNPL SaaS Platform - Buy Now Pay Later with Inventory & Sales Management"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0",
    # Required by Frappe 16; uv needs URL deps declared directly
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench]
is-frappe-app = true
apps = ["nasiya365"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
